2006-06-08 Aurel
* put recoup date in delivery table instead of start/stop_range_min/max

2006-12-01 Seb
* add many more checks with the counter date when we open and close it.

2006-11-30 aurel
* fix z_catalog_item_list

2006-10-17 aurel
* move bank account wf from base to banking_core

2006-09-27 aurel
* add script for getBaobabDestinationPayment

2006-09-07 aurel
* remove foreign check module

2006-09-06 aurel
* reference currency id is now defined as a property

2006-08-11 aurel
* improve view for counter module inventory report

2006-08-9 aurel
* fix script that check counter is opened and comment useless log to prevent security problem

2006-05-18 aurel
* update Delivery_getVaultItemList to take new categories into account and fix   Baobab_getResourceVintageList

2006-05-11 aurel
* update catalog method to take getBaobabSource/DestinationVariationText into account

2006-05-8 aurel
* choose counter we want to open when opening counter date

2006-05-5 aurel
* clean up the skins

2006-04-13 aurel
* include bank_account

2006-04-10 aurel
* include check operation line

2006-04-10 aurel
* include aggregate base category

2006-04-06 aurel
* include counter date

2006-04-05 aurel
* add manager proxy role to the script to generate account event line
* add SQL method to drop table for accounting event in skins
* add some related key and catalog method

2006-04-05 aurel
* include script and external method for security

2006-04-04 aurel
* implement accounting date and counter
* implement accounting event creation

2006-02-14 yo
* Allow Auditor to see checks.

2006-02-13 yo
* Checkbook_init must accept arguments.

2006-02-11 yo
* Remove site properties, since they are not necessary any longer.
* Remove local documents and property sheets, since they are now stored in ERP5Banking.

2006-02-11 yo
* Remove Category and Delivery Cell.
* Add Banking Operation Line.

2006-01-09 aurel
* Update z_catalog_stock_list