@@ -518,7 +518,7 @@
                 </item>
                 <item>
                     <key> <string>title</string> </key>
-                    <value> <string>Account Number</string> </value>
+                    <value> <string>Debit Account Number</string> </value>
                 </item>
                 <item>
                     <key> <string>truncate</string> </key>
